@@ -1,3 +1,4 @@
+%hr
 %h2
   Chronological List of Historic Incidents 
 - if @system_decorator.incident_histories.empty?
