@@ -2,7 +2,7 @@
   X
 %br
 %h1 
-  Status of 
+  Current Status of 
   =@system_decorator.name 
 #incident-section
   =render('incidents/incident')  
