@@ -19,24 +19,24 @@ Scenario: Check that you can login using the correct credentials
 
 	And in the nav bar the following <links> should be <visible>
 	Examples:
-	| links 					| visible 	|
-	| View Dashboard			| yes		|
-	| Contacts	 				| yes		|
-	| Tell Us?					| yes		|
-	| Admin Login				| yes		|
-	| Create New Incident		| no		|
-	| Edit Existing Incident	| no	 	|	
+	| links 									| visible |
+	| View Dashboard					| yes			|
+	| Contacts	 							| yes			|
+	| Tell Us?								| yes			|
+	| Admin Login							| yes			|
+	| Create New Incident			| no			|
+	| Edit Existing Incident	| no	 		|	
 
 	Then I login into the Dashboard using the correct login credentials
 
 	And in the nav bar the following <links> should be <visible>
 	Examples:
-	| links 					| visible 	|
-	| View Dashboard			| yes		|
-	| Contacts	 				| yes		|
-	| Tell Us?					| yes		|
-	| Admin Login				| no		|
-	| Create New Incident		| yes		|
-	| Edit Existing Incident	| yes	 	|	
+	| links 									| visible |
+	| View Dashboard					| yes			|
+	| Contacts	 							| yes			|
+	| Tell Us?								| yes			|
+	| Admin Login							| no			|
+	| Create New Incident			| yes			|
+	| Edit Existing Incident	| yes	 		|	
 
-Integration Test: ./test/integration/browser/incident_functions_test.rb - 'Test all the functions related to managing incidents'
+Integration Test: ./test/integration/browser/check_homepage_navbar_test.rb
