@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: users
+#
+#  id              :integer          not null, primary key
+#  email           :string(255)
+#  name            :string(255)
+#  password_digest :string(255)
+#  role_id         :integer
+#  created_at      :datetime
+#  updated_at      :datetime
+#  auth_token      :string(255)
+#
+
 require 'test_helper'
 
 class UserTest < ActiveSupport::TestCase
